--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,13 +1,10 @@
 //----------------------------------*\
 // SCSS MIXINS
 //----------------------------------*/
-
 @import 'mixins/_position.scss';
-
 //----------------------------------*\
 // CONFIG MODULES
 //----------------------------------*/
-
 // Config modules
 @import 'modules/_vars.scss';
 @import 'modules/_clearfix.scss';
@@ -16,35 +13,30 @@
 //----------------------------------*\
 // PARTIALS
 //----------------------------------*/
-
 @import 'partials/_header.scss';
 @import 'partials/_nav.scss';
 @import 'partials/_sidebar.scss';
 @import 'partials/_main.scss';
 @import 'partials/_footer.scss';
-
 //----------------------------------*\
 // OBJECTS & MODULES
 //----------------------------------*/
-
 @import 'modules/_buttons.scss';
 @import 'modules/_inputs.scss';
 @import 'modules/_lists.scss';
 @import 'modules/_typography.scss';
 @import 'modules/_misc.scss';
 @import 'modules/_app.scss';
-
 // Enhancement modules
 @import 'modules/_breakpoints.scss';
 @import 'modules/_print.scss';
-
 //----------------------------------*\
 // VENDOR
 //----------------------------------*/
-
 @import 'vendor/_external.scss';
 @import './bower_components/bootstrap-sass/assets/stylesheets/bootstrap.scss';
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,700,300);
-$font-family-base: 'Raleway', sans-serif;
+$font-family-base: 'Raleway',
+sans-serif;
 @Import bootstrap;
 @Import fontawesome;
