--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -1,2 +1,233 @@
-.main {
+
+main {
+    margin-top: 80px;
+    ul {
+        list-style-type: none;
+        padding-left: 0px;
+    }
+    h2 {
+        color: black;
+        margin-top: 0;
+        font-family: 'Oswald';
+        font-size: 20px;
+        color: black;
+        margin-top: 0;
+        max-height: 60px;
+        overflow: hidden;
+    }
+
+
+    .masonry {
+
+        border: 1px solid #999;
+        width: 700px;
+        height: 400px;
+
+        /* Masonry container */
+        column-count: 5;
+        column-gap: .7em;
+        position: relative;
+        overflow: hidden;
+        -webkit-transform: rotate(-7deg);
+        top: -30px;
+        left: -20px;
+
+    }
+
+    .highlight {
+
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    width: 50%;
+    z-index: 7;
+    height: 90%;
+    background: #222;
+    padding: 25px;
+    color: white;
+        h2 {
+            color: #fff;
+        }
+        .tags {
+            margin-bottom: 10px;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+    }
+
+    .caption {
+        font-family: Oswald;
+
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        background: black;
+        font-size: 20px;
+
+        text-weight: bold;
+        text-transform: uppercase;
+        opacity: .8;
+        padding: 15px;
+        color: white;
+    }
+    .caption span {
+        color: #eb0000;
+    }
+    .item {
+        /* Masonry bricks or child elements */
+
+        background-color: #eee;
+        display: inline-block;
+        margin: 0 0 .7em;
+        width: 100%;
+        border: 0;
+    }
+    .hero-container {
+        overflow: hidden;
+        --width: 600px;
+        height: 330px;
+        position: relative;
+        margin-bottom: 30px;
+        background: -moz-linear-gradient(45deg, rgba(192, 192, 192, 1) 0%, rgba(192, 192, 192, 1) 49%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 1) 100%);
+        /* ff3.6+ */
+        background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(192, 192, 192, 1)), color-stop(49%, rgba(192, 192, 192, 1)), color-stop(50%, rgba(0, 0, 0, 1)), color-stop(100%, rgba(0, 0, 0, 1)));
+        /* safari4+,chrome */
+        background: -webkit-linear-gradient(45deg, rgba(192, 192, 192, 1) 0%, rgba(192, 192, 192, 1) 49%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 1) 100%);
+        /* safari5.1+,chrome10+ */
+        background: -o-linear-gradient(45deg, rgba(192, 192, 192, 1) 0%, rgba(192, 192, 192, 1) 49%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 1) 100%);
+        /* opera 11.10+ */
+        background: -ms-linear-gradient(45deg, rgba(192, 192, 192, 1) 0%, rgba(192, 192, 192, 1) 49%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 1) 100%);
+        /* ie10+ */
+        background: linear-gradient(45deg, rgba(192, 192, 192, 1) 0%, rgba(192, 192, 192, 1) 49%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 1) 100%);
+        /* w3c */
+        /* filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#c0c0c0', GradientType=1);*/
+        /* ie6-9 */
+    }
+    .text img {
+        width: 100%;
+        margin-bottom: 15px;
+    }
+    .text {
+        float: left;
+        position: relative;
+
+        background: #fff;
+        padding: 20px;
+        min-height: 200px;
+        border: 1px solid #e1e1e1;
+        border-top: 2px solid #eb0000;
+        height: 447px;
+
+        overflow: hidden;
+        margin-bottom: 25px;
+
+        @media (max-width: 660px)  {
+
+        }
+        @media (min-width: 660px) and (max-width: 767px)  {
+
+            max-width: 48.5%;
+            margin-right: 19px;
+            &:nth-child(2n+2) {
+                margin-right: 0;
+
+            }
+        }
+
+        @media (min-width: 768px) and (max-width: 993px) {
+
+            max-width: 32%;
+            margin-right: 14px;
+            &:nth-child(3n+3) {
+                margin-right: 0;
+
+
+            }
+
+        }
+
+        @media (min-width: 994px) and (max-width: 1199px){
+
+            max-width: 23.5%;
+            margin-right: 18px;
+
+            &:nth-child(4n+4) {
+                margin-right: 0;
+
+
+            }
+
+        }
+
+         @media (min-width: 1200px){
+
+            max-width: 24%;
+            margin-right: 15px;
+
+            &:nth-child(4n+4) {
+                margin-right: 0;
+
+
+            }
+
+        }
+
+
+    }
+    .text-holder {
+
+
+    }
+    .bottom-bar {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 45px;
+        border-top: 1px solid #f1f1f1;
+        background: #f1f1f1;
+        padding: 5px;
+        margin-left: -20px;
+
+        font-size: 10px;
+
+    }
+    .bottom-bar, .highlight {
+
+        span  {
+            display: inline-block;
+            font-size: 10px;
+            margin-bottom: 3px;
+            border-radius: 2px;
+            padding: 1px 5px;
+            color: white;
+            background-color: #e80000;
+        }
+        span:nth-child(1) {
+            background-color: #999;
+        }
+        span:nth-child(2) {
+            background-color: grey;
+        }
+        span.loc:nth-child(1) {
+            background-color: yellow;
+            display: inline-block;
+        }
+        span.loc:nth-child(2) {
+            background-color: limegreen;
+        }
+        span.loc:nth-child(3) {
+            background-color: darkorange;
+        }
+
+        .loc {
+            text-transform: uppercase;
+            font-size: 8px;
+            a {
+                color: white;
+            }
+        }
+    }
+
 }
