--- a/src/scss/partials/_nav.scss
+++ b/src/scss/partials/_nav.scss
@@ -1,10 +1,24 @@
-.nav {
-  ul {
-    list-style: none;
-    li {
-      a {
-
-      }
+nav {
+    &.navbar>.container .navbar-brand {
+        margin-left: 0;
+    @media (max-width: 500px){
+            margin-left: 15px;
+        }
     }
-  }
+    a.navbar-brand {
+
+        padding: 0;
+        width: 80px;
+        ul {
+            list-style: none;
+            li {
+                a {}
+            }
+        }
+    }
+
+.navbar-inverse .navbar-nav>li>a, .navbar-inverse .navbar-text
+ {
+    color: #f1f1f1 !important;
+}
 }
