--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,5 @@
+
+
 //----------------------------------*\
 // SCSS MIXINS
 //----------------------------------*/
@@ -34,7 +36,9 @@
 // VENDOR
 //----------------------------------*/
 @import 'vendor/_external.scss';
-@import './bower_components/bootstrap-sass/assets/stylesheets/bootstrap.scss';
+@import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
+
+
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,700,300);
 $font-family-base: 'Raleway',
 sans-serif;
